# diffpng

./: .gitignore  LICENSE  diffpng-lib.cabal
app/: Main.hs
src/: DiffPng.hs  Difference.hs
src/Difference/: Color.hs  Directory.hs  File.hs  Image.hs  List.hs  Utility.hs
src/Difference/Directory/: Extension.hs
src/Difference/File/: BasePath.hs  Destination.hs  Enumeration.hs  Extension.hs  Output.hs  OutputType.hs
src/Difference/Image/: Color.hs  Directory.hs  File.hs
src/Difference/Image/File/: BasePath.hs  Generation.hs  Output.hs  OutputType.hs
