name:                diffpng-lib
version:             0.2.0
build-type:          Simple
cabal-version:       >= 1.10

executable diffpng
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , diffpng-lib
                     , optparse-applicative >= 0.13 && < 0.14
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     DiffPng
  build-depends:       base >= 4.7 && < 5
                     , conduit-combinators >= 1.1 && < 1.2
                     , filepath >= 1.4 && < 1.5
                     , safe >= 0.3 && < 0.4
                     , directory >= 1.3 && < 1.4
  default-language:    Haskell2010
  default-extensions:  RankNTypes
